[package]
name = "pcotool"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
futures = "0.3.30"
reqwest = { version = "0.12.2", default-features = false, features = [ "http2", "json", "rustls-tls" ] }
scraper = "0.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = [ "full" ] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
