[package]
name = "pcotool"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.5"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9.0"
color-eyre = "0.6"
futures = "0.3.30"
futures-util = "0.3.30"
phf = "0.11.2"
reqwest = { version = "0.12", default-features = false, features = [ "http2", "json", "rustls-tls" ] }
scraper = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [ "full" ] }
tokio-stream = { version = "0.1.15", features = ["full"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
